-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1106 2011-06-21 18:02:07 remko Exp $
-----------------------------------------------------------------------------------------

2011-06-21	remko
	* pslib.[ch]:		Added rounded rectangle symbol PSL_RNDRECT ('R').
	* PSL_prologue.ps:	---"---
	* psxy[z]_func.c:	---"---
	* explain_symbol.txt:	New shared file for psxy[z].txt.
	* gmt_init.c:		Redesign gmt_decode_tinfo in advance of allowing empties.
	* *.c:			Removed axis items GMT_INTV_UPPER and GMT_INTV_LOWER (interval
				annotation is determined by 'type' in GMT_PLOT_AXIS_ITEM struct).

2011-06-20	remko
	* gmt_notunix.h:	Only define PATH_SEPARATOR (as char), not also PATH_DELIM.

2011-06-19	pwessel
	* *.c:			Eliminated DIR_DELIM since '/' works for all systems.
				Added WIN32 check to turn /x/dir into x:/dir paths
	* pslegend_func.c:	Enhanced -D to allow for clever offsets away from given origin.

2011-06-18	pwessel
	* grdpaste_func.c:	Fixed porting bugs, JL added test case that now works.

2011-06-16	pwessel
	* gmt_io.c:		Like for segment header, turn on -ho when a header is read.
	* sample1d_func.c:	The spatial resampling had a porting bug.
	* greenspline_func.c:	Fixed a few porting bugs, added several tests to suite.

2011-06-14	pwessel
	* sph:			Added test suite for the sph programs.  Mostly works.

2011-06-14	jluis
	* gmt_support.c:	qsort_s (Windows) uses a mix of the ordering mess between GNU and BSD

2011-06-13	pwessel
	* gmt_support.c:	Even the order of args to the compare function in qsort_r
				is permuted between BSD and GNU... [See 2011-05-28 entry].
	* spotter:		Added spotter test examples - fixed porting bugs.
				
2011-06-13	remko
	* gmt_support.c:	Use defs GMT_{INSIDE,ONEDGE,OUTSIDE} from gmt_support.h
				instead of local defs GMT_{INSIDE,ONSIDE,OUTSIDE}_POLYGON.
				GMT_get_primary_annot moved to gmt_plot.c (made local).